更新 2022-2023大学大一生活.md

--- a/source/_posts/2022-2023大学大一生活.md
+++ b/source/_posts/2022-2023大学大一生活.md
@@ -12,15 +12,13 @@ title: 2023年5月25日-大一生活的浅浅回顾
 
 ## 1、先看经历的两年高考
 
-### 这是2021年高考：
-![1](https://github.com/humengofchina/mengnanBlog/assets/99729216/b908abf2-153d-401a-ae8c-23b470d227fb)
+### 这是2021年高考：已删除
 
 
 
 ### 这是2022年高考：
 
 ![2](https://github.com/humengofchina/mengnanBlog/assets/99729216/b6ed2a27-52fa-4de6-beea-87f1d77023f3)
-
 
 就是这样，希望刚高考结束的你们看到这些应该有些欣慰吧！
 
